Fix additional Java 8+ API usage for iOS compatibility
- Replace Set.of() with Collections.singleton() in DelayedReveal.java
- Replace Stream API (.stream().filter/map/collect) with traditional loops
- Add MapUtil.computeIfAbsent() for iOS-compatible map operations
- Replace Comparator.comparing() with ComparatorUtil.comparing()
- Replace Map.computeIfAbsent() with MapUtil.computeIfAbsent()

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>